Completed Preference feature of Notebook
able to change notebook title and background

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,11 +18,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".NoteDetailActivity"
             android:label="@string/edit_fragment_title"
-            android:parentActivityName=".MainActivity"></activity>
+            android:parentActivityName=".MainActivity" />
+
+        <activity
+            android:name=".AppPreferences"
+            android:label="@string/title_preferences"
+            android:parentActivityName=".MainActivity"/>
     </application>
 
 </manifest>
